= Counterclockwise ChangeLog
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: left
:toc-title: ChangeLog
:toclevels: 0

== Counterclockwise 0.32.1

`0.32.1` released on July ..., 2015

== Counterclockwise 0.32.0

`0.32.0` released on July 29, 2015

- Note that Counterclockwise drops Eclipse 3.x support, and now only supports Eclipse 4
- This release upgrades the embedded Leiningen from 2.5.0 to 2.5.1.

=== Support of Clojure 1.7.0
- Fix bug preventing to go to symbol declaration (upgrade of `ccw.server` version to `0.2.0`)
- Preference to revert printing of namespaces and exceptions in the REPL to the 1.6.0 behavior

=== Support for cider-nrepl in the REPL

==== cider-nrepl and Clojure projects

`cider-nrepl` ( https://github.com/clojure-emacs/cider-nrepl ) is a community effort to provide editor-agnostic nREPL middlewares. +
CCW is now able to use `cider-nrepl` middlewares for providing the same features available in the `ccw.server` lib, though not all features of `cider-nrepl` are exposed by CCW yet.

- There is a Clojure Preference menu:Preferences[Clojure > General > Launch REPLs with cider-nrepl] that is turned on by default.
- This Preference automatically creates a `cider-nrepl` enabled REPL when you use the Clojure launchers via `Run as ...` menus or contextual menus or keyboard shortcuts (e.g. kbd:[Ctrl + Alt + S])
- Note that if CCW detects `cider-nrepl` in the project classpath, then the project version will be used.
- This works both for Leiningen projects or any Java project having the Clojure jar in their classpath.

WARNING: CCW only works with `cider-nrepl` > 0.9.1

==== cider-nrepl and Clojurescript projects

More manual work is required if your project also has ClojureScript.

First add `cider-nrepl` and `piggieback` support for your project:

[source,clojure]
----
(defproject ...
  ;; cider-nrepl support
  :plugins [[cider/cider-nrepl "0.9.1"]]